--- a/src/pages/Users/UsersTable/UsersTable.styles.scss
+++ b/src/pages/Users/UsersTable/UsersTable.styles.scss
@@ -3,7 +3,9 @@
 
 .users-table {
   background-color: $white;
-  border: 1px solid $borderColor;
+  border: 1px solid #213f7d0f;
+  box-shadow: 3px 5px 20px #0000000a;
+  border-radius: 4px;
   padding: 1rem;
   margin-top: 2rem;
   max-width: calc(100vw - 2.5rem);
@@ -52,13 +54,17 @@
       }
 
       &-description {
-        padding: 0.4rem;
+        padding: 0.4rem 0;
+        padding-right: 1rem;
+
+        @include lg {
+          padding-right: 0;
+        }
 
         .description-text {
           font-size: $xs;
           min-width: max-content;
           margin: 0;
-          padding: 0.1rem 0.5rem;
 
           @include md {
             font-size: $md;
@@ -69,6 +75,7 @@
           width: fit-content;
           background-color: $borderColor;
           border-radius: 10px;
+          padding: 0.1rem 0.5rem;
         }
 
         &-pending {
@@ -76,6 +83,7 @@
           background-color: #e9b2001a;
           color: $sunYellow;
           border-radius: 10px;
+          padding: 0.1rem 0.5rem;
         }
 
         &-active {
@@ -83,12 +91,15 @@
           color: $green;
           background-color: #39cd621a;
           border-radius: 10px;
+          padding: 0.1rem 0.5rem;
         }
+
         &-blacklisted {
           width: fit-content;
           color: $error;
           background-color: #e4033b1a;
           border-radius: 10px;
+          padding: 0.1rem 0.5rem;
         }
       }
     }
